testsuite/tests/properties/invalid_lambda_arg_type/map_no_index.lkt
import common

class ExampleBlock: BaseExampleBlock {
    @exported fun p(): Array[Entity[Example]] =
        node.items.map((e: Int) => e.as_bare_entity)
}
